adjusted text, fixed accidental spacing adjustment

--- a/explorer/styles/Docs.module.css
+++ b/explorer/styles/Docs.module.css
@@ -198,6 +198,7 @@
     .downloadsContainer {
         flex-direction: column;
         width: 100%;
+        height: 100%;
     }
     .fullDownload {
         max-width: 100%;
